--- a/src/css/output.css
+++ b/src/css/output.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.4.3 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.10 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -554,6 +554,54 @@ video {
   --tw-contain-style:  ;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.sticky {
+  position: sticky;
+}
+
+.bottom-52 {
+  bottom: 13rem;
+}
+
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+
+.col-span-3 {
+  grid-column: span 3 / span 3;
+}
+
+.row-span-2 {
+  grid-row: span 2 / span 2;
+}
+
+.row-span-3 {
+  grid-row: span 3 / span 3;
+}
+
+.row-start-1 {
+  grid-row-start: 1;
+}
+
+.row-start-2 {
+  grid-row-start: 2;
+}
+
+.row-end-3 {
+  grid-row-end: 3;
+}
+
+.row-end-4 {
+  grid-row-end: 4;
+}
+
 .mx-20 {
   margin-left: 5rem;
   margin-right: 5rem;
@@ -565,6 +613,10 @@ video {
 
 .-mt-\[17rem\] {
   margin-top: -17rem;
+}
+
+.mb-40 {
+  margin-bottom: 10rem;
 }
 
 .mb-8 {
@@ -587,6 +639,10 @@ video {
   margin-top: 0.75rem;
 }
 
+.mt-36 {
+  margin-top: 9rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
 }
@@ -597,6 +653,10 @@ video {
 
 .flex {
   display: flex;
+}
+
+.grid {
+  display: grid;
 }
 
 .h-3\/4 {
@@ -629,6 +689,18 @@ video {
        columns: 16rem;
 }
 
+.grid-flow-col {
+  grid-auto-flow: column;
+}
+
+.grid-rows-3 {
+  grid-template-rows: repeat(3, minmax(0, 1fr));
+}
+
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
+}
+
 .flex-row {
   flex-direction: row;
 }
@@ -637,8 +709,24 @@ video {
   justify-content: flex-end;
 }
 
+.justify-between {
+  justify-content: space-between;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-9 {
   gap: 2.25rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
 }
 
 .rounded-lg {
@@ -654,12 +742,29 @@ video {
   border-bottom-right-radius: 1rem;
 }
 
+.rounded-bl-2xl {
+  border-bottom-left-radius: 1rem;
+}
+
 .rounded-bl-\[1rem\] {
   border-bottom-left-radius: 1rem;
 }
 
 .rounded-tl-\[6rem\] {
   border-top-left-radius: 6rem;
+}
+
+.rounded-tr-2xl {
+  border-top-right-radius: 1rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .px-14 {
@@ -682,6 +787,11 @@ video {
   line-height: 2.5rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -696,6 +806,10 @@ video {
 
 .font-normal {
   font-weight: 400;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .leading-normal {
@@ -736,11 +850,35 @@ body {
 .line-img {
   box-sizing: content-box;
   width: 100%;
-  height: 80%;
+  height: 100%;
   border: 2px solid #e5e7eb;
-  margin-top: -18rem;
+  margin-top: -21rem;
   margin-left: 2rem;
   border-radius: 1rem;
+}
+
+/* .most-picked .left {
+  background-image: url("/src/img/Blue-Origin-Fams.png");
+  height: 100%;
+  width: 100%;
+} */
+
+.most-picked .left > img {
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 50%,
+    rgba(0, 0, 0, 0.5) 99.91%
+  );
+}
+
+/* .most-picked .left {
+  margin-top: -2rem;
+} */
+
+.most-picked .header-card {
+  background-color: #ff498b;
+  /* border-radius: 0px 15px; */
+  margin-top: -15rem;
 }
 
 .hover\:shadow-lg:hover {
